feat(evaluation): get all evaluation rubric and criteria list
