# internal/entities/evaluation.go
@@ -16,3 +16,23 @@ type CritetiaRow struct {
 	CriterionWeight        string `json:"criterion_weight"`
 	CriterionMaxScore      string `json:"criterion_max_score"`
 }
+
+type ListAllRubricsAndCriteriaResp struct {
+	Rubrics []RubricAndCriteriaRow `json:"rubrics"`
+}
+
+type RubricAndCriteriaRow struct {
+	ID            string         `json:"id"`
+	Name          string         `json:"name"`
+	DescriptionMd string         `json:"description_md"`
+	VersionLabel  string         `json:"version_label"`
+	Criteria      []CriterionRow `json:"criteria"`
+}
+
+type CriterionRow struct {
+	ID            string `json:"id"`
+	Name          string `json:"name"`
+	DescriptionMd string `json:"description_md"`
+	Weight        string `json:"weight"`
+	MaxScore      string `json:"max_score"`
+}
